--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,9 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<style>
+    .parent{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    
+}
+
+.parent {
+  -ms-overflow-style: none;  
+  scrollbar-width: none;  
+}
+.parent::-webkit-scrollbar { 
+  display: none;  
+}
+
+
+#example1{
+    width: 100%;
+    height: 100%;
+    padding-right: 17px; /* Increase/decrease this value for cross-browser compatibility */
+    box-sizing: content-box; /* So the width will be 100% + 17px */
+    overflow: hidden;
+}
+</style>
 </head>
 <body>
-    <div class="container">
+    <div class="container parent">
         <div class="row" style="margin: 10vh 25% 5vh 25%;">
             <div class="alert alert-primary btn-lg btn-block" role="alert">
                 <span style="margin-left: 10vw;">Profile</span>
@@ -34,15 +59,19 @@
                 <a href="/pdf/output<%=data.name%>.pdf" target="_blank" class="btn btn-success">Download Your data</a>
             </div>
         </div>
+
+            <div id="example1"  style="margin: 11vh 19vw;
+        height: 105vh;
+        width: 54vw;"></div>
         
-        <object data="/pdf/output<%=data.name%>.pdf" type="application/pdf" width="600" height="500">
-            <embed src="/pdf/output<%=data.name%>.pdf" width="600px" height="500px" />
-                <p>This browser does not support PDFs. Please download the PDF to view it: 
-                <a href="/pdf/output<%=data.name%>.pdf">Download PDF</a>.</p>
-            </embed></object>
+
+        
+
         
                 
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfobject/2.1.1/pdfobject.min.js"></script>
+    <script>PDFObject.embed("http://localhost:3000/pdf/output<%=data.name%>.pdf", "#example1");</script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
